# fw-nrfconnect-nrf

./: CMakeLists.txt  Kconfig.nrf  west.yml
applications/asset_tracker_v2/tests/gps_module/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml  testcase.yaml
applications/asset_tracker_v2/tests/gps_module/src/: gps_module_test.c
cmake/: extensions.cmake
drivers/serial/: Kconfig  uart_nrf_sw_lpuart.c
include/: spm.h
include/logging/: log_backend_tz_s.h  log_link_tz_s.h
lib/fatal_error/: fatal_error.c
lib/nrf_modem_lib/: nrf_modem_os.c
modules/memfault-firmware-sdk/: memfault_integration.c
nrf5_sdk/: CMakeLists.txt  Kconfig
nrf5_sdk/ble/: CMakeLists.txt  Kconfig  ble_advdata.c  ble_srv_common.c
nrf5_sdk/include/: app_button.h  app_error.h  app_error_weak.h  app_timer.h  app_util.h  app_util_platform.h  nordic_common.h  nrf_assert.h  nrf_atomic.h  nrf_log.h  nrf_log_ctrl.h  nrf_pwr_mgmt.h  nrf_sdh.h  nrf_sdh_ant.h  nrf_sdh_ble.h  nrf_sdh_freertos.h  nrf_sdh_soc.h  nrf_section.h  nrf_section_iter.h  nrf_strerror.h  sdk_common.h  sdk_errors.h  sdk_macros.h  sdk_os.h
nrf5_sdk/libraries/: CMakeLists.txt  Kconfig  Kconfig.irq_connect  app_button.c  app_error.c  app_error_weak.c  app_timer.c  app_util_platform.c  boards.c  irq_connect.c  nrf_atomic.c  nrf_pwr_mgmt.c  nrf_pwr_mgmt.ld  nrf_strerror.c
nrf5_sdk/softdevice/: CMakeLists.txt  Kconfig  nrf_sdh.c  nrf_sdh_ant.c  nrf_sdh_ble.c  nrf_sdh_freertos.c  nrf_sdh_soc.c  sdh.ld
samples/: CMakeLists.txt
samples/saadc_dppi/: CMakeLists.txt  README.md
samples/spm/: prj.conf  spm_ns_debug_logs_dump.conf  spm_uart.overlay
scripts/: quarantine.yaml
subsys/: CMakeLists.txt  Kconfig
subsys/spm/: Kconfig  (+5 more)
(+88 files in other folders)
